# genome-ltm-moe

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: README.md  abstention_eval.yaml  agentic.yaml  data_modalities.yaml  dna_foundation_small.yaml  fusion.yaml  model_genome_ltm_moe_v0.yaml  model_genome_ltm_moe_v1_b200.yaml  model_genome_ltm_moe_v2_gb300.yaml  platform_metadata.yaml  sv_evidence.yaml  task_heads.yaml  tiles.yaml  training_cpu_smoke.yaml  training_defaults.yaml  training_phase1_selfsup.yaml  training_phase2_retrieval.yaml  training_phase3_local_encoder.yaml  training_scale.yaml  trait_head.yaml  vcf_projection_fields.yaml  verifier_policy.yaml
docs/: 00_scope_and_non_goals.md  01_system_overview.md  02_data_modalities_and_cross_tech.md  03_model_architecture.md  04_training_curriculum.md  05_evaluation_and_calibration.md  06_vcf_projection_v4_3.md  07_compute_and_scaling.md  08_risk_controls_and_clinical_research_boundary.md  09_reading_list.md  TODO_tracker.md  abstention_and_ambiguity.md  agentic_workflows_inspiration.md  compute_and_cost.md  cross_tech_fusion.md  data_access_and_ethics.md  eval_suite.md  investor_one_pager.md  model_spec.md  orchestration_macbook.md  paper_outline.md  phase_dependency_graph.md  pitch_project_overview.md  protein_design_overview.md  references.md  roadmap_and_milestones.md  scaling_design.md  sequencing_platforms.md  task_heads.md  tiles_and_retrieval.md  training_curriculum.md  vcf_projection.md
examples/: example_internal_evidence.json  (+1 more)
(+149 files in other folders)
