[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genomeltm"
version = "0.1.0"
description = "GenomeLTM-MoE research blueprint (interpretation only)"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
