[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-ltm-moe"
version = "0.1.0"
description = "GenomeLTM-MoE research blueprint (interpretation only)"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["genomaic*", "genomeltm*"]
